--- a/package.json
+++ b/package.json
@@ -70,12 +70,13 @@
     "@electron-forge/maker-zip": "^6.0.0-beta.55",
     "@electron-forge/plugin-webpack": "6.0.0-beta.54",
     "@marshallofsound/webpack-asset-relocator-loader": "^0.5.0",
+    "@types/node": "^15.3.0",
     "@types/react": "^17.0.6",
     "@types/react-dom": "^17.0.5",
     "@typescript-eslint/eslint-plugin": "^4.0.1",
     "@typescript-eslint/parser": "^4.0.1",
     "css-loader": "^5.0.0",
-    "electron": "12.0.8",
+    "electron": "^12.0.8",
     "eslint": "^7.6.0",
     "eslint-plugin-import": "^2.20.0",
     "fork-ts-checker-webpack-plugin": "^6.0.1",
@@ -85,6 +86,8 @@
     "typescript": "^4.0.2"
   },
   "dependencies": {
+    "@types/electron": "^1.6.10",
+    "electron-fetch": "^1.7.3",
     "electron-squirrel-startup": "^1.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
