--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "name": "noisyboy25",
     "email": "dj402and@gmail.com"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/noisyboy25/electron-manga-client.git"
+  },
   "license": "MIT",
   "config": {
     "forge": {
@@ -23,15 +27,10 @@
       "makers": [
         {
           "name": "@electron-forge/maker-squirrel",
-          "config": {
-            "name": "electron_ts_webpack_pg"
-          }
+          "config": {}
         },
         {
-          "name": "@electron-forge/maker-zip",
-          "platforms": [
-            "darwin"
-          ]
+          "name": "@electron-forge/maker-zip"
         },
         {
           "name": "@electron-forge/maker-deb",
@@ -40,6 +39,18 @@
         {
           "name": "@electron-forge/maker-rpm",
           "config": {}
+        }
+      ],
+      "publishers": [
+        {
+          "name": "@electron-forge/publisher-github",
+          "config": {
+            "repository": {
+              "owner": "noisyboy25",
+              "name": "electron-manga-client"
+            },
+            "prerelease": true
+          }
         }
       ],
       "plugins": [
@@ -63,12 +74,13 @@
     }
   },
   "devDependencies": {
-    "@electron-forge/cli": "^6.0.0-beta.55",
-    "@electron-forge/maker-deb": "^6.0.0-beta.55",
-    "@electron-forge/maker-rpm": "^6.0.0-beta.55",
-    "@electron-forge/maker-squirrel": "^6.0.0-beta.55",
-    "@electron-forge/maker-zip": "^6.0.0-beta.55",
+    "@electron-forge/cli": "6.0.0-beta.54",
+    "@electron-forge/maker-deb": "6.0.0-beta.54",
+    "@electron-forge/maker-rpm": "6.0.0-beta.54",
+    "@electron-forge/maker-squirrel": "6.0.0-beta.54",
+    "@electron-forge/maker-zip": "6.0.0-beta.54",
     "@electron-forge/plugin-webpack": "6.0.0-beta.54",
+    "@electron-forge/publisher-github": "6.0.0-beta.54",
     "@marshallofsound/webpack-asset-relocator-loader": "^0.5.0",
     "@types/node": "^15.3.0",
     "@types/react": "^17.0.6",
@@ -90,6 +102,7 @@
     "electron-fetch": "^1.7.3",
     "electron-squirrel-startup": "^1.0.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "update-electron-app": "^2.0.1"
   }
 }
